<resources>
    <string name="app_name">Ifcoder Operator</string>

    <string name="login_title">Kirish</string>
    <string name="login_username">Foydalanuvchi nomi</string>
    <string name="login_password">Parol</string>
    <string name="login_button">Kirish</string>
    <string name="login_error">Login yoki parol noto\'g\'ri</string>
    <string name="login_network_error">Serverga ulanib bo\'lmadi. Internetni tekshiring.</string>

    <string name="tasks_title">Vazifalarim</string>
    <string name="tasks_empty">Sizga tayinlangan vazifalar yo\'q</string>
    <string name="tasks_no_client">Mijoz biriktirilmagan</string>
    <string name="tasks_mark_done">Bajarildi</string>
    <string name="tasks_logout">Chiqish</string>
    <string name="tasks_refresh_permissions">Ruxsatlarni yangilash</string>
    <string name="permissions_all_granted_hint">Barcha ruxsatlar berilgan va xizmat qayta ishga tushirildi. Joylashuv baribir kelmasa: Sozlamalar → Ilovalar → %1$s → Batareya bo\'limidan \"Cheklanmagan\" tanlang.</string>
    <string name="permissions_denied_hint">Joylashuv ruxsati berilmadi. Sozlamalar → Ilovalar → %1$s → Ruxsatlar → Joylashuv bo\'limidan qo\'lda yoqing.</string>

    <string name="location_notification_title">Joylashuv kuzatilmoqda</string>
    <string name="location_notification_text">Ifcoder Operator ish vaqtida joylashuvni serverga yuboradi</string>

    <string name="notification_channel_alerts">Vazifa bildirishnomalari</string>
    <string name="notification_channel_ops">Fon xizmatlari</string>

    <string name="sms_sent_title">SMS yuborildi</string>
    <string name="sms_failed_title">SMS yuborilmadi</string>

    <string name="permission_location_required">Ilova ishlashi uchun joylashuv ruhsati kerak</string>
    <string name="permission_background_location_required">Fon rejimida joylashuv uchun \"Har doim ruxsat berish\" tanlang</string>
    <string name="permission_sms_required">Mijozlarga avtomatik SMS yuborish uchun SMS ruhsati kerak</string>

    <string name="task_detail_title">Vazifa tafsilotlari</string>
    <string name="task_detail_client">Mijoz</string>
    <string name="task_detail_project">Loyiha</string>
    <string name="task_detail_due_date">Muddat</string>
    <string name="task_detail_priority">Muhimlik</string>
    <string name="task_detail_no_description">Tavsif kiritilmagan</string>
    <string name="task_status_todo">Bajarilmagan</string>
    <string name="task_status_in_progress">Jarayonda</string>
    <string name="task_status_done">Bajarilgan</string>
    <string name="task_action_start">Boshlash</string>
    <string name="task_action_done">Bajarildi</string>
    <string name="task_action_call">Qo\'ng\'iroq qilish</string>
    <string name="task_action_sms">SMS yuborish</string>
    <string name="task_no_phone">Mijozning telefon raqami kiritilmagan</string>
    <string name="task_update_failed">Holatni o\'zgartirib bo\'lmadi</string>
    <string name="sms_dialog_title">Mijozga SMS</string>
    <string name="sms_dialog_send">Yuborish</string>
    <string name="sms_dialog_cancel">Bekor qilish</string>
    <string name="sms_default_text">Assalomu alaykum, %1$s! \"%2$s\" bo\'yicha siz bilan bog\'lanmoqchi edik.</string>
</resources>
